# comfyui-fast-mosaic-detector

./: LICENSE  README.ja.md  README.md  __init__.py  fast_mosaic_detector_hybrid.py  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
assets/examples/: example_input.webm  example_output.webm
custom_nodes/comfyui-fast-mosaic-detector/: fast_mosaic_detector_accurate.py  fast_mosaic_detector_fast.py
example_workflow/: FastMosaicDetectorExample.json  FastMosaicDetectorExample2.json
