[project]
name = "fast-mosaic-detector"
description = "High-speed and high-accuracy mosaic detection node for ComfyUI. Supports FAST, ACCURATE, and HYBRID modes with ROI refinement."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy>=1.20.0", "opencv-python>=4.5.0", "torch>=1.13.0", "torchvision>=0.14.0", "pillow>=9.0.0", "ffmpeg-python>=0.2.0"]

[project.urls]
Repository = "https://github.com/yano/comfyui-fast-mosaic-detector"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/yano/comfyui-fast-mosaic-detector/wiki"
"Bug Tracker" = "https://github.com/yano/comfyui-fast-mosaic-detector/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-fast-mosaic-detector"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

